Add Hero component and update styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #161b22;
+  background-color: hsl(262, 66%, 33%);
   color: white;
 }
 
@@ -17,6 +17,46 @@ main {
   min-height: 100vh;
 }
 
+a {
+  text-decoration: none;
+}
+
+#header-text {
+  display: flex;
+  gap: 0.5em;
+  align-items: center;
+  padding: 0.5em 1em;
+  font-weight: bold;
+  background: none;
+}
+
+#main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #18181b;
+  padding: 2em 4em;
+  border-radius: 2px;
+  box-shadow: 0 0 60px rgba(0, 0, 0, 0.2);
+}
+
+#github-repo-link {
+  display: flex;
+  gap: 0.5em;
+  align-items: center;
+  padding: 0.5em 1em;
+  font-weight: bold;
+  background: none;
+  cursor: pointer;
+  color: white;
+  background-color: #29292e;
+  border-radius: 0.125em;
+}
+
+#github-repo-link:hover {
+  background-color: #333;
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -24,41 +64,53 @@ form {
   padding: 1em;
 }
 
-input {
+#register-command-input {
   padding: 1em;
   outline: none;
+  background-color: #333;
+  outline: none;
+  border: none;
+  color: white;
+  border-radius: 0.125em;
 }
 
-button {
+#register-command-btn {
   padding: 1em;
   font-weight: bold;
   background: none;
   cursor: pointer;
   color: white;
-  border: solid 2px #51c3bc;
+  background-color: #5b64f1;
+  outline: none;
+  border: none;
+  border-radius: 0.125em;
+  margin-bottom: 20px;
 }
 
-button:hover {
-  background-color: #51c3bc;
+#register-commands-btn:hover {
+  background-color: #6871ed;
 }
 
-a {
-  padding-top: 10px;
-  text-decoration: none;
-  color: rgb(215, 242, 254);
-}
-
-.hoverLinks {
-  padding-top: 10px;
-  padding: 1em;
+#invite-discord-bot-link {
+  padding: 1.5em;
   font-weight: bold;
   background: none;
   cursor: pointer;
   color: white;
-  border: solid 2px #9d51c3;
+  width: 226px;
+  text-align: center;
+  border-radius: 0.125em;
+  background: linear-gradient(90deg, #5a64f1, #df47d2);
   text-decoration: none;
 }
 
-.hoverLinks:hover {
-  background-color: #9d51c3;
+#invite-discord-bot-link:hover {
+  background: linear-gradient(90deg, #6871ed, #ea5cde);
+}
+
+#divider {
+  width: 70%;
+  height: 1px;
+  background-color: #333;
+  margin: 1em 0;
 }
